--- a/templates/unbound.local.conf.j2
+++ b/templates/unbound.local.conf.j2
@@ -22,12 +22,14 @@ local-zone: "{{vlan}}.{{dns_domain}}." static
        {% elif iface.vlan is defined %}
          {# NOTE: this requires a string as vlan name #}
          {% set dns_name = iface.dns + '.' + iface.vlan + '.' + dns_domain + '.' %}
+         {% set domain_name = iface.vlan + '.' + dns_domain + '.' %}
        {% else %}
          {% set dns_name = iface.dns + '.' + dns_domain + '.' %}
        {% endif %}
      {# with a vlan the hostname is name.vlan.dns_domain #}
      {% elif iface.vlan is defined %}
        {% set dns_name = node + '.' + iface.vlan + '.' + dns_domain %}
+       {% set domain_name = iface.vlan + '.' + dns_domain + '.' %}
      {# without it is name.dns_domain #}
      {% else %}
        {% set dns_name = node + '.' + dns_domain %}
@@ -37,6 +39,17 @@ local-data: "{{dns_name}} IN A {{iface.ipv4 | ipaddr('address')}}"
 local-data-ptr: "{{iface.ipv4 | ipaddr('address')}} {{dns_name}}"
        {% if iface.label is defined %}
 local-data: '{{dns_name}} TXT "{{iface.label}}"'
+       {% endif %}
+       {% if iface.dns_aliases is defined %}
+         {% for alias in iface.dns_aliases %}
+           {% if alias.endswith('.') %}
+local-data: "{{alias}} IN A {{iface.ipv4 | ipaddr('address')}}"
+           {% elif domain_name is defined %}
+local-data: "{{alias}}.{{domain_name}}. IN A {{iface.ipv4 | ipaddr('address')}}"
+           {% else %}
+local-data: "{{alias}}.{{dns_domain}}. IN A {{iface.ipv4 | ipaddr('address')}}"
+           {% endif %}
+         {% endfor %}
        {% endif %}
      {% else %}
 # skipping {{dns_name}}
