--- a/templates/unbound.conf.j2
+++ b/templates/unbound.conf.j2
@@ -87,6 +87,12 @@ server:
   {% endif %}
 {% endfor %}
 
+{% if unbound_extra_access_networks is defined %}
+ {% for net in unbound_extra_access_networks %}
+       access-control: {{ net }} allow
+ {% endfor %}
+{% endif %}
+
         # enable this feature to copy the source address of queries to reply.
         # Socket options are not supported on all platforms. experimental.
         # interface-automatic: yes
