Add support for custom stub zones

--- a/templates/unbound.conf.j2
+++ b/templates/unbound.conf.j2
@@ -613,6 +613,19 @@ stub-zone:
   stub-addr: {{stub_dns}}
   {% endfor %}
 {% endif %}
+{% if unbound.stub_zones is defined %}
+ {% for _zone in unbound.stub_zones %}
+stub-zone:
+  name: {{unbound.stub_zones[_zone].name|default(_zone)}}
+  {% if unbound.stub_zones[_zone].addr is defined %}
+  stub-addr: {{unbound.stub_zones[_zone].addr}}
+  {% elif unbound.stub_zones[_zone].addrs is defined %}
+    {% for _addr in unbound.stub_zones[_zone].addrs %}
+  stub-addr: {{_addr}}
+    {% endfor %}
+  {% endif %}
+ {% endfor %}
+{% endif %}
 include: /etc/unbound/conf.d/*.conf
 
 # Stub zones.
