--- a/templates/unbound.conf.j2
+++ b/templates/unbound.conf.j2
@@ -210,23 +210,23 @@ server:
 
         # the time to live (TTL) value lower bound, in seconds. Default 0.
         # If more than an hour could easily give trouble due to stale data.
-        # cache-min-ttl: 0
+        cache-min-ttl: {{unbound.core.cache_min_ttl|default(0)}}
 
         # the time to live (TTL) value cap for RRsets and messages in the
         # cache. Items are not cached for longer. In seconds.
-        # cache-max-ttl: 86400
+        cache-max-ttl: {{unbound.core.cache_max_ttl|default(86400)}}
 
         # the time to live (TTL) value for cached roundtrip times, lameness
         # and EDNS version information for hosts. In seconds.
-        # infra-host-ttl: 900
+        infra-host-ttl: {{unbound.core.infra_host_ttl|default(900)}}
 
         # the number of slabs to use for the Infrastructure cache.
         # the number of slabs must be a power of 2.
         # more slabs reduce lock contention, but fragment memory usage.
-        # infra-cache-slabs: 4
+        infra-cache-slabs: {{unbound.core.infra_cache_slabs|default(4)}}
 
         # the maximum number of hosts that are cached (roundtrip, EDNS, lame).
-        # infra-cache-numhosts: 10000
+        infra-cache-numhosts: {{unbound.core.infra_cache_numhosts|default(10000)}}
 
         # Enable IPv4, "yes" or "no".
         do-ip4: {{unbound.core.do_ip4|default('yes')}}
@@ -406,6 +406,9 @@ server:
         # module-config: "validator iterator"
         module-config: "{{unbound.core.module_config|default('iterator')}}"
 
+{% if unbound.core.dns64_prefix is defined %}
+        dns64-prefix: {{unbound.core.dns64_prefix}}
+{% endif %}
         # File with DLV trusted keys. Same format as trust-anchor-file.
         # There can be only one DLV configured, it is trusted from root down.
         # Downloaded from https://secure.isc.org/ops/dlv/dlv.isc.org.key
@@ -447,13 +450,13 @@ server:
 
         # The time to live for bogus data, rrsets and messages. This avoids
         # some of the revalidation, until the time interval expires. in secs.
-        # val-bogus-ttl: 60
+        val-bogus-ttl: {{unbound.core.val_bogus_ttl|default(60)}}
 
         # The signature inception and expiration dates are allowed to be off
         # by 10% of the lifetime of the signature from our local clock.
         # This leeway is capped with a minimum and a maximum.  In seconds.
-        # val-sig-skew-min: 3600
-        # val-sig-skew-max: 86400
+        val-sig-skew-min: {{unbound.core.val_sig_skew_min|default(3600)}}
+        val-sig-skew-max: {{unbound.core.val_sig_skew_max|default(86400)}}
 
         # Should additional section of secure message also be kept clean of
         # unsecure data. Useful to shield the users of this validator from
@@ -477,30 +480,30 @@ server:
         # keysize. Keep this table very short, as linear search is done.
         # A message with an NSEC3 with larger count is marked insecure.
         # List in ascending order the keysize and count values.
-        # val-nsec3-keysize-iterations: "1024 150 2048 500 4096 2500"
+        val-nsec3-keysize-iterations: "{{unbound.core.val_nsec3_keysize_iterations|default("1024 150 2048 500 4096 2500")}}"
 
         # instruct the auto-trust-anchor-file probing to add anchors after ttl.
-        # add-holddown: 2592000 # 30 days
+        add-holddown: {{unbound.core.add_holddown|default(2592000)}} # 30 days
 
         # instruct the auto-trust-anchor-file probing to del anchors after ttl.
-        # del-holddown: 2592000 # 30 days
+        del-holddown: {{unbound.core.del_holddown|default(2592000)}} # 30 days
 
         # auto-trust-anchor-file probing removes missing anchors after ttl.
         # If the value 0 is given, missing anchors are not removed.
-        # keep-missing: 31622400 # 366 days
+        keep-missing: {{unbound.core.keep_missing|default(31622400)}} # 366 days
 
         # the amount of memory to use for the key cache.
         # plain value in bytes or you can append k, m or G. default is "4Mb".
-        # key-cache-size: 4m
+        key-cache-size: {{unbound.core.key_cache_size|default('4m')}}
 
         # the number of slabs to use for the key cache.
         # the number of slabs must be a power of 2.
         # more slabs reduce lock contention, but fragment memory usage.
-        # key-cache-slabs: 4
+        key-cache-slabs: {{unbound.core.key_cache_slabs|default(4)}}
 
         # the amount of memory to use for the negative cache (used for DLV).
         # plain value in bytes or you can append k, m or G. default is "1Mb".
-        # neg-cache-size: 1m
+        neg-cache-size: {{unbound.core.neg_cache_size|default('1m')}}
 
         # a number of locally served zones can be configured.
         #       local-zone: <zone> <type>
